--- a/eCommerce-Application/src/styles/pages/_login.scss
+++ b/eCommerce-Application/src/styles/pages/_login.scss
@@ -6,7 +6,7 @@
 
     height: 100dvh;
 
-    background-image: url('../assets/images/backround-login.png');
+    background-image: url('../assets/images/backround-login.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
