--- a/eCommerce-Application/src/styles/abstracts/_variables.scss
+++ b/eCommerce-Application/src/styles/abstracts/_variables.scss
@@ -10,11 +10,11 @@
     --color-error: hsl(0, 100%, 61%);
     --color-white: hsl(0, 0%, 100%);
     --color-white-alpha: hsla(0, 0%, 100%, 80%);
-
     --color-danger: hsl(0, 81%, 44%);
     --color-black: hsl(0, 0%, 0%);
-    --color-input: hsla(0, 0%, 85%, 1);
+    --color-header: hsla(0, 0%, 0%, 0.3);
     --color-black-alpha: hsla(0, 0%, 40%, 0.4);
+    --color-input: hsla(0, 0%, 85%, 1);
     --drop-shadow-white: 0 0 2rem var(--color-white),
         0 0 0.2rem var(--color-white);
     --drop-shadow-light: 0 0 2rem var(--color-primary),
@@ -40,12 +40,11 @@
     --fs-title: clamp(1.4rem, 4vw, 10rem);
     --fs-logo: clamp(4rem, 5vw, 9rem);
     --fs-form: clamp(1.2rem, 3vw, 2rem);
-    --fs-paragraph: clamp(1.2rem, 2vw, 2.2rem);
+    --fs-paragraph: clamp(1.5rem, 2vw, 2.2rem);
     --fs-big: clamp(2rem, 3vw, 4rem);
     --fs-medium-big: clamp(1.6rem, 1.3vw, 3.5rem);
     --fs-medium: clamp(1.2rem, 1vw, 3rem);
-    --fs-small: clamp(1rem, 2vw, 1.6rem);
+    --fs-small: clamp(1.3rem, 2vw, 1.6rem);
     --fs-review: clamp(1rem, 2vw, 1.4rem);
-    --fs-very-small: clamp(0.5rem, 1vw, 1.3rem);
-    --fs-smallest: clamp(0.5rem, 0.9vw, 1.1rem);
+    --fs-smallest: clamp(1rem, 0.9vw, 1.1rem);
 }
