--- a/eCommerce-Application/src/styles/base/_typography.scss
+++ b/eCommerce-Application/src/styles/base/_typography.scss
@@ -273,3 +273,73 @@
         font-size: var(--fs-paragraph);
     }
 }
+
+.nav {
+    &__title {
+        font-family: var(--ff-secondary);
+        font-size: var(--fs-review);
+    }
+}
+
+.search-bar {
+    input {
+        font-family: var(--ff-product);
+        font-size: var(--fs-paragraph);
+        text-align: left;
+    }
+}
+
+.card {
+    &__title {
+        font-size: var(--fs-review);
+    }
+
+    &__description {
+        font-family: var(--ff-product);
+        font-size: var(--fs-review);
+
+        &-btn {
+            font-family: var(--ff-product);
+            font-size: var(--fs-small);
+        }
+    }
+
+    &__price {
+        font-size: var(--fs-paragraph);
+    }
+
+    .promotion-price {
+        font-size: var(--fs-paragraph);
+    }
+
+    .cross-price {
+        font-size: var(--fs-small);
+    }
+}
+
+.parameters {
+    &__btn {
+        font-size: var(--fs-review);
+        text-align: center;
+    }
+}
+
+.parameters__dropdown {
+    label,
+    button {
+        font-family: var(--ff-product);
+        font-size: var(--fs-small);
+    }
+
+    &-inputs {
+        font-family: var(--ff-product);
+
+        & > * {
+            font-size: var(--fs-small);
+        }
+    }
+}
+
+.bread-crumbs {
+    font-size: var(--fs-medium);
+}
