--- a/eCommerce-Application/src/styles/layout/_product.scss
+++ b/eCommerce-Application/src/styles/layout/_product.scss
@@ -48,7 +48,15 @@
         grid-row: 2;
         grid-column: 2;
 
+        width: fit-content;
+
         opacity: 0.5;
+
+        transition: opacity 0.3s linear;
+
+        &:hover {
+            opacity: 1;
+        }
 
         & a {
             @include mixins.flex(null, flex-start, center);
