feat: add error-page when connection fails

--- a/eCommerce-Application/src/styles/components/_errors.scss
+++ b/eCommerce-Application/src/styles/components/_errors.scss
@@ -26,3 +26,10 @@
         }
     }
 }
+.error-connection {
+    @include mixins.flex(row, center, center);
+
+    text-align: center;
+    font-size: var(--fs-big);
+    color: var(--color-white);
+}
