--- a/eCommerce-Application/src/styles/layout/_header.scss
+++ b/eCommerce-Application/src/styles/layout/_header.scss
@@ -56,9 +56,16 @@
     }
 
     .nav {
+        @include mixins.respond-to('mobile') {
+            height: 20rem;
+        }
+        @include mixins.respond-to('tablet') {
+            height: auto;
+        }
         &__list {
+            position: relative;
             --gap: 2rem;
-            @include mixins.flex(null, center, flex-end);
+            @include mixins.flex(null, center, flex-start);
             flex-wrap: wrap;
 
             padding-block: 1rem;
@@ -70,8 +77,6 @@
 
         &__item {
             @include mixins.flex(null, center, center);
-
-            position: relative;
 
             & img {
                 height: 2rem;
